--- a/WpfLab4/MainWindow.xaml
+++ b/WpfLab4/MainWindow.xaml
@@ -1,12 +1,32 @@
 ﻿<Window x:Class="WpfLab4.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfLab4"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Lab 4" Height="450" Width="800"
+        Loaded="Window_Loaded" 
+        KeyDown="Window_KeyDown"
+        Focusable="True">
 
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Background="#EEE" Margin="5">
+            <TextBlock Text="Обери фігуру:" Margin="5"/>
+            <ComboBox x:Name="cbType" SelectionChanged="cbType_SelectionChanged" Margin="5">
+                <ComboBoxItem Content="Коло" Tag="Circle" IsSelected="True"/>
+                <ComboBoxItem Content="Квадрат" Tag="Square"/>
+            </ComboBox>
+
+            <ContentControl x:Name="ConfigContainer" Margin="5"/>
+
+            <Button Content="Створити" Click="BtnCreate_Click" Margin="5"/>
+            <Button Content="Видалити" Click="BtnDelete_Click" Margin="5"/>
+
+            <TextBlock Text="Управління: Стрілки" Margin="5,20,5,5" Foreground="Blue"/>
+        </StackPanel>
+
+        <Canvas x:Name="MyCanvas" Grid.Column="1" Background="White" MouseLeftButtonDown="MyCanvas_Click"/>
     </Grid>
 </Window>
