--- a/WpfLab4/MainWindow.xaml
+++ b/WpfLab4/MainWindow.xaml
@@ -13,7 +13,7 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Grid.Column="0" Background="#F0F0F0" Margin="5">
-            <TextBlock Text="Обери фігуру:" Margin="5,10,5,5" FontWeight="Bold"/>
+            <TextBlockАWeight="Bold"/>
 
             <ComboBox x:Name="cbType" SelectionChanged="cbType_SelectionChanged" Margin="5">
                 <ComboBoxItem Content="Коло" Tag="Circle" IsSelected="True"/>
